--- a/app/assets/stylesheets/api/tags.css
+++ b/app/assets/stylesheets/api/tags.css
@@ -146,3 +146,16 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+
+.tag-header-letter {
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+
+.tag-item-container {
+  margin-left: 10px;
+}
