--- a/app/assets/stylesheets/api/notebooks.css
+++ b/app/assets/stylesheets/api/notebooks.css
@@ -411,7 +411,7 @@
   background: #f8f8f8;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, san-serif;
   color: #4d4d4d;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .notebook-detail-notes-list {
@@ -538,28 +538,11 @@
   font-weight: 400;
 }
 
-.note-edit-container {
-  max-width: 600px;
-  padding: 40px;
-  width: 100%;
-  height: 100vh;
-  padding: 20px;
-}
-
 .notebook-actions-nav-text {
   text-decoration: none;
   font-size: 12px;
   margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.note-edit-save-button {
-  padding-left: 50px;
-}
-
-.notebooks-item-col1 {
-  display: flex;
-  padding-left: 10px;
 }
 
 .notebooks-item-col5, .col5 {
@@ -575,41 +558,6 @@
 
 .current-view {
   background-color: #404040;
-}
-
-.note-edit-buttons-container {
-  display: flex;
-  justify-content: flex-end;
-  padding: 10px 0 10px 0;
-}
-
-.edit-form-title-input {
-      /* display: block; */
-    font-size: 24px;
-    width: 100%;
-    margin-bottom: 10px;
-    /* padding: 8px 40px 4px; */
-    padding-left: 10px;
-    outline: none;
-    z-index: 1;
-    cursor: text;
-    font-weight: 300;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
-}
-
-.note-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.edit-submit-button {
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 10px;
-}
-
-.ql-container.ql-snow, .ql-toolbar.ql-snow {
-  border: none;
 }
 
 .search-notebooks {
