--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -77,27 +77,24 @@
 .taggings-search-modal {
   position: relative;
   background: #fff;
-  height: 40px;
   width: 140px;
-  box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
   text-align: left;
   list-style: none;
   border-radius: 3px;
   color: #666;
   font-size: 12px;
   z-index: 15;
-  margin-top: -50px;
-  margin-left: -100px;
+  margin-top: -60px;
+  margin-left: -120px;
 }
 
 .taggings-search-modal-child {
   width: 140px;
   position: absolute;
+  padding: 1px;
+  box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 2px rgba(27, 39, 51, .08);
 }
 
-.app {
-  /* margin: 1rem 4rem; */
-}
 
 .app .ql-container {
   border-bottom-left-radius: 0.5em;
