--- a/app/assets/stylesheets/api/tags.css
+++ b/app/assets/stylesheets/api/tags.css
@@ -24,6 +24,25 @@
   transition: all 0.1s ease-out;
 }
 
+.tagging-nav-menu {
+  position: absolute;
+  background: #fff;
+  height: 115px;
+  width: 140px;
+  box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
+  text-align: left;
+  list-style: none;
+  border-radius: 3px;
+  color: #666;
+  font-size: 12px;
+  z-index: 15;
+  margin-top: -70px;
+}
+
+.tagging-nav-menu-child {
+  width: 140px;
+  position: absolute;
+}
 
 .tag-item-button {
   font-family: Arial, Helvetica, sans-serif;
@@ -116,13 +135,30 @@
   line-height: 30px;
 }
 
-.tag-actions-nav-delete, .tag-actions-nav-rename {
+.tag-actions-nav-delete, .tag-actions-nav-rename, .tagging-filter-by-tag, .tagging-remove, .tagging-remove-from-all {
   /* padding: 3px 20px 3px 10px; */
   /* margin: 10px; */
   transition-property: color, background-color;
   transition-duration: 0.1s;
   transition-timing-function: ease-in-out;
   width: 100%;
+}
+
+.taggings-modal-button-text {
+  margin: 0px 5px 0px 5px;
+}
+
+.tagging-hr {
+  width: 100%;
+  height: 1px;
+  border-top: 1px solid #f2f2f2;
+  margin: 4px 0px 4px 0px;
+}
+
+.tagging-filter-by-tag:hover, .tagging-remove:hover, .tagging-remove-from-all:hover {
+  color: #555;
+  background-color: #f5f5f5;
+  cursor: pointer;
 }
 
 .tag-actions-nav-delete:hover {
@@ -206,3 +242,8 @@
   vertical-align: middle;
   align-items: center;
 }
+
+.tag-label-icon {
+  margin-left: 4px;
+}
+
