--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -119,3 +119,54 @@
 .app .ql-editor {
   min-height: 18em;
 }
+
+.note-header {
+  border-bottom: 1px solid #ededed;
+  height: 54px;
+  margin-bottom: 20px;
+  align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.note-header-nav {
+  position: absolute;
+  background: #fff;
+  height: 80px;
+  width: 140px;
+  box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
+  text-align: left;
+  list-style: none;
+  border-radius: 3px;
+  color: #666;
+  font-size: 12px;
+  z-index: 15;
+}
+
+.note-header-nav-child {
+  width: 140px;
+  position: absolute;
+}
+
+.note-header-nav-text {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  color: #666;
+  font-size: 12px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 30px;
+}
+
+.notes-nav-button-text {
+  margin: 0px 5px 0px 5px;
+}
+.notes-nav-button {
+  width: 100%;
+}
+.notes-nav-button:hover {
+    color: #555;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
