--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -6,6 +6,7 @@
   margin: 20px 20px 0 20px;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .note-edit-save-button {
@@ -52,17 +53,27 @@
   border: none;
 }
 
+.note-taggings {
+  height: 50px;
+  /* border-top: 1px solid #ececec; */
+}
+
 .note-tags-container {
   height: 50px;
   border-top: 1px solid #ececec;
   display: flex;
   align-items: center;
+  position: fixed;
+  z-index: 5;
+  bottom: 0%;
+  left: 530px;
+  width: 100%;
+  background-color: white;
 }
 
 .note-edit-container {
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
+  /* height: 100vh; */
+  overflow: hidden;
 }
 
 .show-taggings-container {
@@ -105,7 +116,7 @@
 /* Snow Theme */
 .app .ql-snow.ql-toolbar {
   display: block;
-  background: #eaecec;
+  background: white;
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
 }
@@ -114,6 +125,11 @@
 .app .ql-bubble .ql-editor {
   border: 1px solid #ccc;
   border-radius: 0.5em;
+  background-color: white;
+}
+
+.ql-editor {
+  background-color: white;
 }
 
 .app .ql-editor {
@@ -127,13 +143,13 @@
   align-items: center;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .note-header-nav {
   position: absolute;
   background: #fff;
-  height: 80px;
+  height: 50px;
   width: 140px;
   box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
   text-align: left;
@@ -142,11 +158,12 @@
   color: #666;
   font-size: 12px;
   z-index: 15;
+  margin-left: -140px;
 }
 
 .note-header-nav-child {
   width: 140px;
-  position: absolute;
+  position: relative;
 }
 
 .note-header-nav-text {
@@ -169,4 +186,31 @@
     color: #555;
   background-color: #f5f5f5;
   cursor: pointer;
+}
+
+.current-notebook {
+  display: flex;
+  align-items: center;
+}
+
+.current-notebook-icon {
+  display: flex;
+}
+
+.current-notebook-icon svg path {
+  fill: #858f97;
+}
+
+.current-notebook-title {
+  color: #7a8083;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+}
+
+.current-notebook-title:hover {
+  text-decoration: underline;
+}
+
+.ql-stroke {
+  stroke-width: 1;
 }
