--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -279,9 +279,9 @@
 }
 
 
-.move-note-notebooks-list {
-  margin: 20px 0px 20px 0px;
-}
+/* .move-note-notebooks-list { */
+  /* margin: 20px 0px 20px 0px; */
+/* } */
 
 .move-note-checkbox { flex-basis: 5%; }
 .move-note-notebook-icon { flex-basis: 10%; }
@@ -292,6 +292,29 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
+}
+
+.move-note-notebook-item {
+  padding: 10px 5px 10px 5px;
+}
+
+.move-note-notebook-item:hover {
+  background-color: #f5f5f5;
+  transition: all 0.08s ease-out;
+}
+
+.move-note-notebook-item.selected {
+  background-color: #f0f1f1;
+  border-radius: 3px;
+}
+
+.move-note-checkbox { 
+  opacity: 0;
+}
+
+.move-note-checkbox.selected {
+  opacity: 1;
+  color: #00a82d;
 }
 
 /* end move note modal */
