--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -149,7 +149,7 @@
 .note-header-nav {
   position: absolute;
   background: #fff;
-  height: 120px;
+  height: 80px;
   width: 140px;
   box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
   text-align: left;
@@ -299,13 +299,14 @@
 
 .move-note-notebook-item {
   padding: 10px 5px 10px 5px;
-    display: flex;
+  display: flex;
   align-items: center;
 }
 
 .move-note-notebook-item:hover {
   background-color: #f5f5f5;
   transition: all 0.08s ease-out;
+  cursor: pointer;
 }
 
 .move-note-notebook-item.selected {
