--- a/app/assets/stylesheets/api/notes.css
+++ b/app/assets/stylesheets/api/notes.css
@@ -150,7 +150,7 @@
   position: absolute;
   background: #fff;
   height: 80px;
-  width: 140px;
+  width: 200px;
   box-shadow: 0 0 0 1px rgba(99, 114, 130, .16), 0 4px 12px rgba(27, 39, 51, .08);
   text-align: left;
   list-style: none;
@@ -158,11 +158,12 @@
   color: #666;
   font-size: 12px;
   z-index: 15;
-  margin-left: -140px;
+  margin-left: -200px;
+  margin-top: 10px;
 }
 
 .note-header-nav-child {
-  width: 140px;
+  width: 200x;
   position: relative;
 }
 
@@ -183,9 +184,10 @@
   width: 100%;
 }
 .notes-nav-button:hover {
-    color: #555;
+  color: #555;
   background-color: #f5f5f5;
   cursor: pointer;
+  transition: all 0.1s ease-out;
 }
 
 .current-notebook {
