--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TakeNote</title>
+  <head profile="http://www.w3.org/2005/10/profile">
+  <link rel="icon" 
+      type="image/png" 
+      href="https://www.evernote.com/favicon.ico">
+    <title>takeNote</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
