--- a/app/assets/stylesheets/api/auth_forms.css
+++ b/app/assets/stylesheets/api/auth_forms.css
@@ -1,9 +1,9 @@
 .form-main {
   background: url(https://www.evernote.com/static/static_css_resources/bb6ce0ce7affff91989d4aab2ba9fa53.png) center;
   background-size: 228px 228px;
-  min-height: 100%;
-  height: 1000px;
-  min-width: 100%;
+  /* min-height: 100%; */
+  height: 100vh;
+  width: 100%;
 }
 
 .form-frame {
@@ -12,7 +12,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* border: 2px red dotted; */
   min-height: 500px;
   max-width: 512px;
   margin: 0px auto 28px auto;
